ADD Single Events Page

--- a/assets/rev-manifest.json
+++ b/assets/rev-manifest.json
@@ -1,5 +1,5 @@
 {
-  "css/main.css": "css/main-c5a3b5b866.css",
+  "css/main.css": "css/main-37f67b14e3.css",
   "img/backgrounds/bg-wrapper--3.png": "img/backgrounds/bg-wrapper--3-1c86696607.png",
   "img/backgrounds/bg-wrapper--5.png": "img/backgrounds/bg-wrapper--5-5559ad6cda.png",
   "img/backgrounds/header-bg-2.jpg": "img/backgrounds/header-bg-2-cd512cefaf.jpg",
@@ -9,9 +9,10 @@
   "img/conf/fortaleza-vertical.jpg": "img/conf/fortaleza-vertical-24c675bba3.jpg",
   "img/conf/poa-vertical--small.jpg": "img/conf/poa-vertical--small-e5538fc6eb.jpg",
   "img/conf/poa-vertical.jpg": "img/conf/poa-vertical-e545d6e700.jpg",
+  "img/conf/porto-alegre.jpg": "img/conf/porto-alegre-5fcd478f33.jpg",
   "img/conf/recife-vertical--small.jpg": "img/conf/recife-vertical--small-f7a950c82a.jpg",
   "img/conf/recife-vertical.jpg": "img/conf/recife-vertical-c467a226db.jpg",
-  "img/conf/sorocaba-vertical--small.jpg": "img/conf/sorocaba-vertical--small-6c62affbe0.jpg",
+  "img/conf/recife.jpg": "img/conf/recife-3b549ab844.jpg",
   "img/examples/cards/card-example--type-2-small.jpg": "img/examples/cards/card-example--type-2-small-34dd0b0e67.jpg",
   "img/examples/cards/card-example--type-2.jpg": "img/examples/cards/card-example--type-2-032cb90e2f.jpg",
   "img/examples/cards/card-example.jpg": "img/examples/cards/card-example-6a471d0905.jpg",
@@ -39,7 +40,6 @@
   "img/icons/icon-arrow.svg": "img/icons/icon-arrow-3d55e1df85.svg",
   "img/icons/icon-play.svg": "img/icons/icon-play-d983a59253.svg",
   "img/icons/icon-search.svg": "img/icons/icon-search-60bb1896cc.svg",
-  "img/logos/braziljs-otr-sorocaba.png": "img/logos/braziljs-otr-sorocaba-61829b6408.png",
   "img/logos/braziljs.png": "img/logos/braziljs-70c9c7d796.png",
   "img/logos/braziljs.svg": "img/logos/braziljs-00508dcfc4.svg",
   "img/logos/locaweb.svg": "img/logos/locaweb-7243fa6007.svg",
@@ -63,6 +63,7 @@
   "img/sponsors/logo-getupcloud.svg": "img/sponsors/logo-getupcloud-6661c1ef92.svg",
   "img/sponsors/logo-globocom.svg": "img/sponsors/logo-globocom-91649e895d.svg",
   "img/sponsors/logo-locaweb-new.svg": "img/sponsors/logo-locaweb-new-0a3588ed78.svg",
+  "img/sponsors/logo-locaweb-v-2.svg": "img/sponsors/logo-locaweb-v-2-9d1f5e99eb.svg",
   "img/sponsors/logo-locaweb-v2.svg": "img/sponsors/logo-locaweb-v2-9d1f5e99eb.svg",
   "img/sponsors/logo-locaweb.svg": "img/sponsors/logo-locaweb-09ea055e68.svg",
   "img/thumb-generica-2.jpg": "img/thumb-generica-2-d08ab00929.jpg",
