--- a/assets/rev-manifest.json
+++ b/assets/rev-manifest.json
@@ -1,5 +1,5 @@
 {
-  "css/main.css": "css/main-a47ab0640c.css",
+  "css/main.css": "css/main-5f8f341c00.css",
   "img/backgrounds/bg-wrapper--3.png": "img/backgrounds/bg-wrapper--3-1c86696607.png",
   "img/backgrounds/bg-wrapper--5.png": "img/backgrounds/bg-wrapper--5-5559ad6cda.png",
   "img/backgrounds/header-bg-2.jpg": "img/backgrounds/header-bg-2-cd512cefaf.jpg",
@@ -7,6 +7,7 @@
   "img/backgrounds/ticker-corner-bg.svg": "img/backgrounds/ticker-corner-bg-e375aac645.svg",
   "img/conf/fortaleza-vertical--small.jpg": "img/conf/fortaleza-vertical--small-76bbcaff3b.jpg",
   "img/conf/fortaleza-vertical.jpg": "img/conf/fortaleza-vertical-24c675bba3.jpg",
+  "img/conf/poa-teaser-2018.jpg": "img/conf/poa-teaser-2018-472df9d034.jpg",
   "img/conf/poa-vertical--small.jpg": "img/conf/poa-vertical--small-e5538fc6eb.jpg",
   "img/conf/poa-vertical.jpg": "img/conf/poa-vertical-e545d6e700.jpg",
   "img/conf/recife-vertical--small.jpg": "img/conf/recife-vertical--small-f7a950c82a.jpg",
@@ -42,6 +43,7 @@
   "img/logos/braziljs-otr-sorocaba.png": "img/logos/braziljs-otr-sorocaba-61829b6408.png",
   "img/logos/braziljs.png": "img/logos/braziljs-70c9c7d796.png",
   "img/logos/braziljs.svg": "img/logos/braziljs-00508dcfc4.svg",
+  "img/logos/evnts-logo.png": "img/logos/evnts-logo-dbf67e4589.png",
   "img/logos/locaweb.svg": "img/logos/locaweb-7243fa6007.svg",
   "img/logos/logo-marimbondo.svg": "img/logos/logo-marimbondo-cb09f7ac2f.svg",
   "img/products-example--2.jpg": "img/products-example--2-c89a3f185c.jpg",
