--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,26 @@ language: node_js
 sudo: required
 dist: trusty
 node_js: stable
+addons:
+        ssh_know_host: ˜/.ssh/ssh_known_hosts
+before_deploy:
+        - openssl aes-256-cbc -K $encrypted_deploy_key -iv $encrypted_deploy_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+        - eval "$(ssh-agent -s)"
+        - chmod 600 /tmp/deploy_rsa
+        - chmod 600 /tmp/deploy_rsa
+deploy:
+        - provider: script
+          skip_cleanup: true
+          script: npm run deploy
+          on:
+                  branch: master
+        - provider: script
+          skip_cleanup: true
+          script: rsync -r --exclude=node_modules/ --exclude=.git ./ braziljs-wp:/var/www/html/wp-content/themes/portal-wp-theme-master/
 cache:
-  directories:
-    - "node_modules"
+        directories:
+                - "node_modules"
 before_script:
-  - "npm install -g gulp-cli"
-script: "npm run build"
+        - "npm install -g gulp-cli"
+script: 
+        - "npm run build"
