--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ node_js: stable
 addons:
         ssh_know_host: ˜/.ssh/ssh_known_hosts
 before_deploy:
-        - openssl aes-256-cbc -K $encrypted_deploy_key -iv $encrypted_deploy_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+        - openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv -in deploy_rsa.enc -out deploy_rsa -d
         - eval "$(ssh-agent -s)"
-        - chmod 600 /tmp/deploy_rsa
-        - chmod 600 /tmp/deploy_rsa
+        - chmod 600 deploy_rsa
+        - chmod 600 deploy_rsa
 deploy:
         - provider: script
           skip_cleanup: true
