--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ dist: trusty
 node_js: stable
 addons:
         ssh_know_host: ˜/.ssh/ssh_known_hosts
-before_deploy:
+before_install:
         - openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv -in deploy_rsa.enc -out deploy_rsa -d
+before_deploy:
         - eval "$(ssh-agent -s)"
         - chmod 600 deploy_rsa
         - chmod 600 deploy_rsa
