--- a/.travis.yml
+++ b/.travis.yml
@@ -5,23 +5,19 @@ node_js: stable
 addons:
   ssh_know_host: "˜/.ssh/ssh_known_hosts"
 before_deploy:
-- openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv
-  -in deploy_rsa.enc -out deploy_rsa -d
-- eval "$(ssh-agent -s)"
-- chmod 600 deploy_rsa
-- chmod 600 deploy_rsa
+# - openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv -in deploy_rsa.enc -out deploy_rsa -d
+# - eval "$(ssh-agent -s)"
+# - chmod 600 deploy_rsa
+# - chmod 600 deploy_rsa
 deploy:
 - provider: script
   skip_cleanup: true
   script: npm run deploy
   on:
     branch: master
-- provider: script
-  skip_cleanup: true
-  script: rsync -r --exclude=node_modules/ --exclude=.git ./ braziljs-wp:/var/www/html/wp-content/themes/portal-wp-theme-master/
+# - provider: script
+  # skip_cleanup: true
+  # script: rsync -r --exclude=node_modules/ --exclude=.git ./ braziljs-wp:/var/www/html/wp-content/themes/portal-wp-theme-master/
 cache:
   directories:
-  - node_modules
-before_install:
-- openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv
-  -in deploy_rsa.enc -out deploy_rsa -d
+    - node_modules
