--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ before_script:
   # - "chmod 600 deploy_rsa"
   # - "chmod 600 deploy_rsa"
 script:
-  provider: script
-  skip_cleanup: true
-  script: "npm run build"
+  - "npm run build"
   on:
     branch: master
 cache:
