--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,13 @@ addons:
 before_script:
   - "npm install -g gulp-cli"
   # - "openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv -in deploy_rsa.enc -out deploy_rsa -d"
-  # - "eval '$(ssh-agent -s)'"
-  # - "chmod 600 deploy_rsa"
-  # - "chmod 600 deploy_rsa"
 script:
   - "npm run build"
 cache:
   directories:
     - node_modules
+before_install:
+- openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv -in deploy_rsa.enc -out deploy_rsa -d
+- "eval '$(ssh-agent -s)'"
+- "chmod 600 deploy_rsa"
+- "chmod 600 deploy_rsa"
