--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv -in deploy_rsa.enc -out deploy_rsa -d
 - "eval '$(ssh-agent -s)'"
 - "chmod 600 deploy_rsa"
-- "chmod 600 deploy_rsa"
+- "ssh-add deploy_rsa"
