--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: node_js
 sudo: required
 dist: trusty
 node_js: stable
-addons:
-  ssh_know_host: "˜/.ssh/ssh_known_hosts"
 before_script:
   - "npm install -g gulp-cli"
   # - "openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv -in deploy_rsa.enc -out deploy_rsa -d"
@@ -12,7 +10,7 @@ script:
 cache:
   directories:
     - node_modules
-before_install:
+after_install:
 - openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv -in deploy_rsa.enc -out deploy_rsa -d
 - "eval '$(ssh-agent -s)'"
 - "chmod 600 deploy_rsa"
