--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ dist: trusty
 node_js: stable
 before_script:
   - "npm install -g gulp-cli"
-  # - "openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv -in deploy_rsa.enc -out deploy_rsa -d"
 script:
   - "npm run build"
 cache:
@@ -12,6 +11,6 @@ cache:
     - node_modules
 after_install:
 - openssl aes-256-cbc -K $encrypted_99d98d3b8275_key -iv $encrypted_99d98d3b8275_iv -in deploy_rsa.enc -out deploy_rsa -d
-- "eval '$(ssh-agent -s)'"
-- "chmod 600 deploy_rsa"
-- "ssh-add deploy_rsa"
+- eval "$(ssh-agent -s)"
+- chmod 600 deploy_rsa
+- ssh-add deploy_rsa
