[*] travis.yml pt-08

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dist: trusty
 node_js: stable
 before_script:
   - "npm install -g gulp-cli"
+  - "npm install -g eval"
 script:
   - "npm run build"
 cache:
