[*] travis.yml pt-10

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ after_script:
 - eval "$(ssh-agent -s)"
 - chmod 600 deploy_rsa
 - ssh-add deploy_rsa
+- rsync -r --exclude=node_modules/ --exclude=.git ./ braziljs-wp:/var/www/html/wp-content/themes/portal-wp-theme-master/
