[*] travis.yml pt-11

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ after_script:
 - eval "$(ssh-agent -s)"
 - chmod 600 deploy_rsa
 - ssh-add deploy_rsa
-- rsync -r --exclude=node_modules/ --exclude=.git ./ braziljs-wp:/var/www/html/wp-content/themes/portal-wp-theme-master/
+- rsync -r --exclude=node_modules/ --exclude=.git ./ root@159.89.224.26:/var/www/html/wp-content/themes/portal-wp-theme-master/
