--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 sudo: required
 dist: trusty
 node_js: stable
+addons:
+  ssh_known_hosts: 159.89.224.26
 before_script:
   - "npm install -g gulp-cli"
   - "npm install -g eval"
